--- a/deploy/skaffold.yaml
+++ b/deploy/skaffold.yaml
@@ -2,3 +2,11 @@ apiVersion: skaffold/v2beta7
 kind: Config
 metadata:
   name: pdu-sensors
+
+build:
+  artifacts:
+  - image: registry.gitlab.com/edgetic/hw/pdu-sensors/exporter
+    docker:
+      dockerfile: build/exporter/Dockerfile
+      buildArgs:
+        GO_VERSION: "{{.GO_VERSION}}"
