Working k8s exporter deployment

--- a/deploy/charts/pdu-sensors/templates/deployment.yaml
+++ b/deploy/charts/pdu-sensors/templates/deployment.yaml
@@ -28,23 +28,34 @@ spec:
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
-        - name: {{ .Chart.Name }}
+        - name: exporter
+          args:
+            - --address
+            - "{{ .Values.pduAddress }}"
+            - --interval
+            - "{{ .Values.pduScrapeInterval }}"
+            - --metrics
+            - --port
+            - "{{ .Values.metricsPort }}"
+          envFrom:
+            - secretRef:
+                name: {{ include "pdu-sensors.fullname" . }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
-            - name: http
-              containerPort: 80
+            - name: metrics
+              containerPort: {{ .Values.metricsPort }}
               protocol: TCP
           livenessProbe:
             httpGet:
               path: /
-              port: http
+              port: metrics
           readinessProbe:
             httpGet:
               path: /
-              port: http
+              port: metrics
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
