--- a/deploy/charts/pdu-sensors/templates/deployment.yaml
+++ b/deploy/charts/pdu-sensors/templates/deployment.yaml
@@ -13,10 +13,11 @@ spec:
       {{- include "pdu-sensors.selectorLabels" . | nindent 6 }}
   template:
     metadata:
-    {{- with .Values.podAnnotations }}
       annotations:
+        checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
+        {{- with .Values.podAnnotations }}
         {{- toYaml . | nindent 8 }}
-    {{- end }}
+        {{- end }}
       labels:
         {{- include "pdu-sensors.selectorLabels" . | nindent 8 }}
     spec:
@@ -58,6 +59,26 @@ spec:
               port: metrics
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+        {{- with (ternary .Values.telegrafSidecar nil .Values.telegrafSidecar.enabled) }}
+        - name: telegraf
+          image: "{{ .image.repository }}:{{ .image.tag | default $.Chart.AppVersion }}"
+          imagePullPolicy: {{ .image.pullPolicy }}
+          livenessProbe:
+            httpGet:
+              path: /
+              port: {{ .healthPort }}
+          readinessProbe:
+            httpGet:
+              path: /
+              port: {{ .healthPort }}
+          securityContext:
+            {{- toYaml .securityContext | nindent 12 }}
+          resources:
+            {{- toYaml .resources | nindent 12 }}
+          volumeMounts:
+            - name: telegraf
+              mountPath: /etc/telegraf
+        {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
@@ -70,3 +91,12 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      volumes:
+        {{- if .Values.telegrafSidecar.enabled }}
+        - name: telegraf
+          configMap:
+            name: {{ include "pdu-sensors.fullname" . }}
+            items:
+            - key: telegraf.conf
+              path: telegraf.conf
+        {{- end }}
