--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,11 +17,11 @@ jobs:
           go-version: 1.19
       - name: Testing
         run: |
-          go run ./cmd/raritan-stub --port 3001 -u $(USERNAME) -p $(PASSWORD) --pdu-name pdu01 -v 2 &
-          go run ./cmd/raritan-stub --port 3002 -u $(USERNAME) -p $(PASSWORD) --pdu-name pdu01 -v 2 &
-          go run ./cmd/raritan-stub --port 3003 -u $(USERNAME) -p $(PASSWORD) --pdu-name pdu01 -v 2 &
-          go run ./cmd/raritan-stub --port 3004 -u $(USERNAME) -p $(PASSWORD) --pdu-name pdu01 -v 2 &
-          go run ./cmd/raritan-stub --port 3005 -u $(USERNAME) -p $(PASSWORD) --pdu-name pdu01 -v 2 &
+          go run ./cmd/raritan-stub --port 3001 -u ${USERNAME} -p ${PASSWORD} --pdu-name pdu01 -v 2 &
+          go run ./cmd/raritan-stub --port 3002 -u ${USERNAME} -p ${PASSWORD} --pdu-name pdu01 -v 2 &
+          go run ./cmd/raritan-stub --port 3003 -u ${USERNAME} -p ${PASSWORD} --pdu-name pdu01 -v 2 &
+          go run ./cmd/raritan-stub --port 3004 -u ${USERNAME} -p ${PASSWORD} --pdu-name pdu01 -v 2 &
+          go run ./cmd/raritan-stub --port 3005 -u ${USERNAME} -p ${PASSWORD} --pdu-name pdu01 -v 2 &
           tee -a config.yml > /dev/null <<EOT
           ---
           port: 2112
