--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on:
   push: 
 
 jobs:
-  goreleaser:
+  testing:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -23,7 +23,7 @@ jobs:
           go run ./cmd/raritan-stub --port 3003 -u ${USERNAME} -p ${PASSWORD} --pdu-name pdu01 -v 2 &
           go run ./cmd/raritan-stub --port 3004 -u ${USERNAME} -p ${PASSWORD} --pdu-name pdu01 -v 2 &
           go run ./cmd/raritan-stub --port 3005 -u ${USERNAME} -p ${PASSWORD} --pdu-name pdu01 -v 2 &
-          tee -a config.yml > /dev/null <<EOT
+          tee -a config.yaml > /dev/null <<EOT
           ---
           port: 2112
           metrics: true
@@ -52,8 +52,10 @@ jobs:
           go run ./cmd/exporter -i ${INTERVAL} -c ./config.yaml --metrics -v 2 &
           sleep 10
           curl http://localhost:2112/metrics
+          SUCCESS=$?
           pkill raritan-stub
           pkill exporter
+          exit $SUCCESS
         env:
           ADDRESS: http://localhost
           PORT: 3000
