--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,11 +18,11 @@ jobs:
       - name: Testing
         run: |
           mkdir -p out/build && go build -o ./out/build ./cmd/...
-          go run ./cmd/raritan-stub --port 3001 -u ${USERNAME} -p ${PASSWORD} --pdu-name pdu01 -v 2 &
-          go run ./cmd/raritan-stub --port 3002 -u ${USERNAME} -p ${PASSWORD} --pdu-name pdu01 -v 2 &
-          go run ./cmd/raritan-stub --port 3003 -u ${USERNAME} -p ${PASSWORD} --pdu-name pdu01 -v 2 &
-          go run ./cmd/raritan-stub --port 3004 -u ${USERNAME} -p ${PASSWORD} --pdu-name pdu01 -v 2 &
-          go run ./cmd/raritan-stub --port 3005 -u ${USERNAME} -p ${PASSWORD} --pdu-name pdu01 -v 2 &
+          go run ./cmd/raritan-stub --port 3001 -u ${USERNAME} -p ${PASSWORD} --pdu-name pdu01 -v 2 &> ./log/stub-pdu01.log &
+          go run ./cmd/raritan-stub --port 3002 -u ${USERNAME} -p ${PASSWORD} --pdu-name pdu01 -v 2 &> ./log/stub-pdu02.log &
+          go run ./cmd/raritan-stub --port 3003 -u ${USERNAME} -p ${PASSWORD} --pdu-name pdu01 -v 2 &> ./log/stub-pdu03.log &
+          go run ./cmd/raritan-stub --port 3004 -u ${USERNAME} -p ${PASSWORD} --pdu-name pdu01 -v 2 &> ./log/stub-pdu04.log &
+          go run ./cmd/raritan-stub --port 3005 -u ${USERNAME} -p ${PASSWORD} --pdu-name pdu01 -v 2 &> ./log/stub-pdu05.log &
           tee -a config.yaml > /dev/null <<EOT
           ---
           port: 2112
@@ -49,15 +49,21 @@ jobs:
               username: ${USERNAME}
               password: ${PASSWORD}
           EOT
-          go run ./cmd/exporter -i ${INTERVAL} -c ./config.yaml --metrics -v 2 &
-          sleep 10
-          curl http://localhost:2112/metrics
+          go run ./cmd/exporter -i ${INTERVAL} -c ./config.yaml --metrics -v 2 &> ./log/exporter.log &
+          sleep 1
+          curl http://localhost:2112/metrics > ./log/exporter.out
           SUCCESS=$?
           pkill raritan-stub
           pkill exporter
           exit $SUCCESS
+      - name: Gather logs
+        uses: actions/upload-artifact@v3
+        with:
+          name: logs
+          path: |
+            ./log/
+            ./config.yaml
         env:
-          ADDRESS: http://localhost
           PORT: 3000
           USERNAME: test
           PASSWORD: test
