--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,7 @@ jobs:
       - name: Testing
         run: |
           mkdir -p out/build && go build -o ./out/build ./cmd/...
+          mkdir -p ./log
           go run ./cmd/raritan-stub --port 3001 -u ${USERNAME} -p ${PASSWORD} --pdu-name pdu01 -v 2 &> ./log/stub-pdu01.log &
           go run ./cmd/raritan-stub --port 3002 -u ${USERNAME} -p ${PASSWORD} --pdu-name pdu01 -v 2 &> ./log/stub-pdu02.log &
           go run ./cmd/raritan-stub --port 3003 -u ${USERNAME} -p ${PASSWORD} --pdu-name pdu01 -v 2 &> ./log/stub-pdu03.log &
