--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,10 +19,10 @@ jobs:
         run: |
           mkdir -p out/build && go build -o ./out/build ./cmd/...
           mkdir -p ./log
-          go run ./cmd/raritan-stub --port 3001 -u ${USERNAME} -p ${PASSWORD} -v 2 &> ./log/stub.log &
+          go run ./cmd/raritan-stub --port ${PORT} -u ${USERNAME} -p ${PASSWORD} -v 2 &> ./log/stub.log &
           go run ./cmd/exporter -a http://localhost:${PORT} -u ${USERNAME} -p '${PASSWORD}' -i ${INTERVAL} --metrics -v 2 &> ./log/exporter.log &
           sleep 5
-          curl http://localhost:2112/metrics > ./log/exporter.out
+          curl -s http://localhost:2112/metrics | tee ./log/exporter.out
           SUCCESS=$?
           pkill raritan-stub
           pkill exporter
@@ -87,13 +87,12 @@ jobs:
           EOT
           go run ./cmd/exporter -i ${INTERVAL} -c ./config.yaml --metrics -v 2 &> ./log/exporter.log &
           sleep 5
-          curl http://localhost:2112/metrics > ./log/exporter.out
+          curl -s http://localhost:2112/metrics | tee ./log/exporter.out
           SUCCESS=$?
           pkill raritan-stub
           pkill exporter
           exit $SUCCESS
         env:
-          PORT: 3000
           USERNAME: test
           PASSWORD: test
           INTERVAL: 5
