--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,8 @@ jobs:
           mkdir -p out/build && go build -o ./out/build ./cmd/...
           mkdir -p ./log
           go run ./cmd/raritan-stub --port ${PORT} -u ${USERNAME} -p ${PASSWORD} -v 2 &> ./log/stub.log &
-          go run ./cmd/exporter -a http://localhost:${PORT} -u ${USERNAME} -p '${PASSWORD}' -i ${INTERVAL} --metrics -v 2 &> ./log/exporter.log &
+          sleep 2
+          go run ./cmd/exporter -a "http://localhost:${PORT}" -u ${USERNAME} -p ${PASSWORD} -i ${INTERVAL} --metrics -v 2 &> ./log/exporter.log &
           sleep 5
           curl -s http://localhost:2112/metrics | tee ./log/exporter.out
           SUCCESS=$?
