--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -20,11 +20,11 @@ builds:
 checksum:
   name_template: "checksums.txt"
 
-changelog:
-  filters:
-    include:
-      - >
-        "^(build|chore|ci|docs|feat|fix|perf|refactor|revert|style|test){1}(\([\w\-\.]+\))?(!)?: ([\w ])+([\s\S]*)"
+# changelog:
+#   filters:
+#     include:
+#       - >
+#         "^(build|chore|ci|docs|feat|fix|perf|refactor|revert|style|test){1}(\([\w\-\.]+\))?(!)?: ([\w ])+([\s\S]*)"
 
 archives:
   - id: exporter
