--- a/config/test-config.yaml
+++ b/config/test-config.yaml
@@ -3,24 +3,31 @@
 metrics: true
 # username: test
 # password: test
+interval: 30
+exporter_labels:
+  use_config_name: true
+  serial_number: false
+  snmp_sys_contact: false
+  snmp_sys_name: false
+  snmp_sys_location: false
 pdu_config:
-  - name: pdu01
+  - name: conf_pdu01
     address: "http://localhost:3001"
-    username: test
+    username: test2
     password: test
-  - name: pdu02
+  - #name: conf_pdu02
     address: "http://localhost:3002"
     username: test
     password: test
-  - name: pdu03
+  - name: conf_pdu03
     address: "http://localhost:3003"
     username: test
     password: test
-  - name: pdu04
+  - name: conf_pdu04
     address: "http://localhost:3004"
     username: test
     password: test
-  - name: pdu05
+  - name: conf_pdu05
     address: "http://localhost:3005"
     username: test
     password: test
